--- a/Saltwort/Saltwort/Saltwort.csproj
+++ b/Saltwort/Saltwort/Saltwort.csproj
@@ -39,7 +39,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigFile\INI.cs" />
+    <Compile Include="Interop\NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="System\Info.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
