--- a/Saltwort/Saltwort/System.Automation.csproj
+++ b/Saltwort/Saltwort/System.Automation.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{91F4E146-F486-4759-AA48-6BF4A004789A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Saltwort</RootNamespace>
-    <AssemblyName>Saltwort</AssemblyName>
+    <RootNamespace>System.Automation</RootNamespace>
+    <AssemblyName>System.Automation</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -38,10 +38,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigFile\INI.cs" />
+    <Compile Include="ConfigFile\IniFile.cs" />
     <Compile Include="Interop\NativeMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="System\Info.cs" />
+    <Compile Include="OperatingSystem\Info.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
